# CHM

./: .env.example  .gitignore  AGENTS.md  HANDOFF.md  README.md  alembic.ini  pyproject.toml  requirements-dev.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: chm-task.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
app/: __init__.py  main.py
app/api/: __init__.py  alert_rules.py  clients.py  ingestion.py  pipelines.py  runs.py
app/core/: config.py  errors.py
app/db/: base.py
app/ingestion/: __init__.py  client.py  job.py  mapper.py
app/schemas/: alert_rule.py  client.py  error.py  pipeline.py  run.py
app/services/: __init__.py  alert_rules.py  clients.py  dashboard_queries.py  pipelines.py  runs.py  summaries.py
app/synthetic/: __init__.py  orchestrator.py
docker/: docker-compose.yml
docs/: synthetic-data-playbook.md  synthetic-orchestrator-prompt.md  synthetic-subagent-prompts.md
docs/project-management/: issues.md  pr-workflow.md
docs/validation/: 001-chm-api-ingestion.md
migrations/: env.py
migrations/versions/: 001_create_enums.py  002_clients_pipelines.py  003_runs_alert_rules.py  004_run_indexes.py
specs/001-chm-api-ingestion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py
tests/contract/: __init__.py  test_alert_rules_api.py  test_clients_pipelines_runs_api.py  test_openapi_parity.py
tests/fixtures/: dashboard_seed.sql
tests/integration/: __init__.py  test_alert_rules_scope.py  (+6 more)
(+30 files in other folders)
